<resources>
    <string name="app_name">StrawHats-WorkoutTracker</string>
    <string name="title_home">Workouts</string>
    <string name="title_dashboard">Nutrition</string>
    <string name="title_notifications">Graphs</string>
    <string name="exercises">Workouts</string>
    <string name="nutrition">Nutrition</string>
    <string name="graphs">Graphs</string>
    <string name="goal_calories">Goal: 2,000 kcal</string>
    <string name="current_calories">Logged: 4,000 kcal</string>
    <string name="beakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="plus_sign">+</string>
    <string name="exercise_label">Exercise</string>
    <string name="set_1">Set # </string>
    <string name="rpe_text">RPE (rate of perceived exertion)</string>
    <string name="reps_label">Reps</string>
    <string name="weight_label">Weight</string>
    <string name="new_set">Start New Set</string>
    <string name="new_exercise">Start New Exercise</string>
    <string name="new_day">New Day</string>
    <string name="start_workout">Start workout</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="_1">1</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="end_workout">END WORKOUT</string>
    <string name="add">Add</string>
    <string name="edit_measurement">Edit Measurement</string>
    <string name="goals_saved">Goals Saved!</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="enter_daily_caloric_goals">ENTER DAILY CALORIC GOALS</string>
    <string name="log_out">LOG OUT</string>
    <string name="account">Account</string>
    <string name="update">Update</string>
    <string name="search">Search…</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="food_name">Food Name</string>
    <string name="food_calories">Food Calories</string>
    <string name="food_serving">Food Serving Size(grams)</string>
    <string name="food_fat">Food Total Fat(grams)</string>
    <string name="food_protein">Food Protein(grams)</string>
    <string name="food_carbs">Food Carbohydrates(grams)</string>
    <string name="unit">Unit</string>
    <string name="exercise_error">Fill in all fields</string>
    <string name="expand_more_details">Expand more details</string>
</resources>