<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/goal_calories"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nutritionCaloriesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/current_calories"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nutritionDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/beakfast"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/breakfast_add_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/plus_sign" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/lunch"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <Button
            android:id="@+id/lunch_add_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/plus_sign" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/dinner"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <Button
            android:id="@+id/dinner_add_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/plus_sign" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/snacks"
            android:textAppearance="?attr/textAppearanceHeadline5" />

        <Button
            android:id="@+id/snacks_add_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/plus_sign" />
    </LinearLayout>

</LinearLayout>