<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.strawhats_workouttracker.ui.workout.WorkoutFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_workout" >
        <action
            android:id="@+id/show_workout_detail"
            app:destination="@id/workoutDetailFragment" />
        <action
            android:id="@+id/workout_to_accountFragment"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_navigation_home_to_workoutSummaryFragment2"
            app:destination="@id/workoutSummaryFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.strawhats_workouttracker.ui.nutrition.NutritionListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_nutrition_list" >
        <action
            android:id="@+id/show_nutrition_detail"
            app:destination="@id/nutritionDetailFragment" />
        <action
            android:id="@+id/nutrition_list_to_accountFragment"
            app:destination="@id/accountFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.strawhats_workouttracker.ui.graph.GraphFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_graph" >
        <action
            android:id="@+id/graph_to_accountFragment"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_graphDetailFragment"
            app:destination="@id/graphDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nutritionDetailFragment"
        android:name="com.example.strawhats_workouttracker.ui.nutrition.NutritionDetailFragment"
        android:label="Details"
        tools:layout="@layout/fragment_nutrition_detail" >
        <action
            android:id="@+id/action_nutritionDetailFragment_to_nutritionSearchFragment"
            app:destination="@id/nutritionSearchFragment" />
        <argument android:name="nutrition"
            app:argType="com.example.strawhats_workouttracker.ui.nutrition.Nutrition"/>
    </fragment>

    <fragment
        android:id="@+id/workoutDetailFragment"
        android:name="com.example.strawhats_workouttracker.ui.workout.WorkoutDetailFragment"
        android:label="Current Workout"
        tools:layout="@layout/fragment_workout_detail"/>

    <fragment
        android:id="@+id/nutritionSearchFragment"
        android:name="com.example.strawhats_workouttracker.ui.nutrition.NutritionSearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_nutrition_search" >
        <action
            android:id="@+id/action_nutritionSearchFragment_to_nutritionFactsFragment"
            app:destination="@id/nutritionFactsFragment" />
        <argument android:name="nutrition"
            app:argType="com.example.strawhats_workouttracker.ui.nutrition.Nutrition"/>
        <argument android:name="mealType"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.strawhats_workouttracker.AccountFragment"
        android:label="Account Settings"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/workoutSummaryFragment2"
        android:name="com.example.strawhats_workouttracker.ui.workout.WorkoutSummaryFragment"
        android:label="Summary"
        tools:layout="@layout/fragment_workout_summary">
        <argument
            android:name="workout"
            app:argType="com.example.strawhats_workouttracker.ui.workout.Workout"/>
    </fragment>

    <fragment
        android:id="@+id/nutritionFactsFragment"
        android:name="com.example.strawhats_workouttracker.ui.nutrition.NutritionFactsFragment"
        android:label="Nutritional Info"
        android:layout="@layout/fragment_nutrition_facts"
        tools:layout="@layout/fragment_nutrition_facts">
        <argument
            android:name="foodItem"
            app:argType="com.example.strawhats_workouttracker.ui.nutrition.FoodItem" />
        <argument android:name="nutrition"
            app:argType="com.example.strawhats_workouttracker.ui.nutrition.Nutrition"/>
        <argument android:name="mealType"
            app:argType="string"/>
        <action
            android:id="@+id/action_nutrition_facts_to_nutrition_detail"
            app:destination="@id/nutritionDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/graphDetailFragment"
        android:name="com.example.strawhats_workouttracker.ui.graph.GraphDetailFragment"
        android:label="Graph"
        tools:layout="@layout/fragment_graph_detail">
        <argument
            android:name="exercise_name"
            app:argType="string" />
        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>


</navigation>